Fix results dropdown going out of screen

--- a/resources/less/forum.less
+++ b/resources/less/forum.less
@@ -1,4 +1,9 @@
 .Update-Author-Modal {
+    .Modal-content {
+        // Otherwise the search results dropdown is hidden when it contains many results
+        overflow: visible;
+    }
+
     .Search {
          input {
             display: block;
